Added definition for Event and EventInit

--- a/webstorage/idlharness.html
+++ b/webstorage/idlharness.html
@@ -17,6 +17,12 @@
 <pre id='untested_idl' style='display:none'>
 interface Window {
 };
+
+interface Event {
+};
+
+interface EventInit {
+};
 </pre>
 
 <pre id='idl'>
