--- a/shadow-dom/shadow-trees/shadow-root-001.html
+++ b/shadow-dom/shadow-trees/shadow-root-001.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
+<!--
+Distributed under both the W3C Test Suite License [1] and the W3C
+3-clause BSD License [2]. To contribute to a W3C Test Suite, see the
+policies and contribution forms [3].
+
+[1] http://www.w3.org/Consortium/Legal/2008/04-testsuite-license
+[2] http://www.w3.org/Consortium/Legal/2008/03-bsd-license
+[3] http://www.w3.org/2004/10/27-testcases
+-->
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Shadow DOM Test - Tests a shadow root.</title>
-    <link rel="reference" href="shadow-root-001-ref.html">
-    <link rel="author" title="Hayato Ito" href="mailto:hayato@google.com">
-    <link rel="help" href="https://dvcs.w3.org/hg/webcomponents/raw-file/tip/spec/shadow/index.html#shadow-trees">
-    <script src="../testcommon.js"></script>
-    <meta name="assert" content="When a shadow root is attached, the shadow tree is used.">
-  </head>
-  <body>
-    <div id='host'>
-    </div>
-  <script>
-     var shadowRoot = createSR(host);
-     shadowRoot.innerHTML = '<div>Hello a Shadow Root.</div>';
-  </script>
-  </body>
+<head>
+<title>Shadow DOM Test: Basic shadow root</title>
+<link rel="match" href="shadow-root-001-ref.html">
+<link rel="author" title="Hayato Ito" href="mailto:hayato@google.com">
+<link rel="author" title="Yuta Kitamura" href="mailto:yutak@google.com">
+<link rel="help" href="http://www.w3.org/TR/2013/WD-shadow-dom-20130514/#shadow-trees">
+<meta name="assert" content="When a shadow root is attached, the shadow tree is rendered.">
+<script src="../testcommon.js"></script>
+<style>
+p { color: black; }
+* { color: red; }
+</style>
+</head>
+<body>
+<p>You should see green text saying "PASS" below.</p>
+<div id="host">FAIL</div>
+<script>
+var shadowRoot = window.host.createShadowRoot();
+shadowRoot.innerHTML =
+    '<style>#pass { color: green; }</style>\n' +
+    '<div id="pass">PASS</div>';
+</script>
+</body>
 </html>
