--- a/shadow-dom/shadow-trees/reprojection/reprojection-002.html
+++ b/shadow-dom/shadow-trees/reprojection/reprojection-002.html
@@ -1,28 +1,40 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Shadow DOM Test - Tests a reprojection.</title>
-    <link rel="reference" href="reprojection-002-ref.html">
-    <link rel="author" title="Anna Ogawa" href="mailto:anna.ogawa.0219@gmail.com">
-    <link rel="help" href="https://dvcs.w3.org/hg/webcomponents/raw-file/tip/spec/shadow/index.html#reprojection">
-    <script src="../../testcommon.js"></script>
-    <meta name="assert" content="
-      When a shadow root is attached, a node that is selected is distributed into more than one insertion point.">
-  </head>
-  <body>
-    <div id='host'>
-      <div class="A" style="color:green;">Apple.</div>
-      <div class="B" style="color:red;">Orange.</div>
-    </div>
-    
-  <script>
-     var shadowRoot = createSR(host);
-     shadowRoot.innerHTML = '<div id="host2">Hello a Shadow Root.<content></content><div>Banana.</div></div>';
-     var host2 = shadowRoot.getElementById("host2");
-     var shadowRoot2 = createSR(host2);
-     shadowRoot2.innerHTML = '<div>Hello a Shadow Root2.</div><div><content select=".A"></content></div>';
+<!--
+Distributed under both the W3C Test Suite License [1] and the W3C
+3-clause BSD License [2]. To contribute to a W3C Test Suite, see the
+policies and contribution forms [3].
 
-  </script>
-  </body>
+[1] http://www.w3.org/Consortium/Legal/2008/04-testsuite-license
+[2] http://www.w3.org/Consortium/Legal/2008/03-bsd-license
+[3] http://www.w3.org/2004/10/27-testcases
+-->
+<!DOCTYPE html>
+<head>
+<meta charset="utf-8">
+<title>Shadow DOM Test - Tests a reprojection with a select attribute.</title>
+<link rel="match" href="reprojection-002-ref.html">
+<link rel="author" title="Anna Ogawa" href="mailto:anna.ogawa.0219@gmail.com">
+<link rel="author" title="Hayato Ito" href="mailto:hayato@google.com">
+<link rel="help" href="http://www.w3.org/TR/2013/WD-shadow-dom-20130514/#reprojection">
+<meta name="assert" content="A node is distributed into more than one insertion point with a select attribute.">
+<script src="../../testcommon.js"></script>
+<style>
+.pass { color: green; }
+.fail { color: red; }
+</style>
+</head>
+<body>
+<p>You should see green text saying "Apple" below.</p>
+<div id="host">
+  <div class="A pass">Apple.</div>
+  <div class="B fail">Orange.</div>
+</div>
+<script>
+  var shadowRoot = host.createShadowRoot();
+  shadowRoot.innerHTML = '<div id="host2">Hello a Shadow Root.<content></content><div class="fail">Banana.</div></div>';
+  var host2 = shadowRoot.getElementById("host2");
+  var shadowRoot2 = host2.createShadowRoot();
+  shadowRoot2.innerHTML = '<div>Hello a Shadow Root2.</div><div><content select=".A"></content></div>';
+</script>
+</body>
 </html>
