--- a/XMLHttpRequest/event-readystatechange-loaded.htm
+++ b/XMLHttpRequest/event-readystatechange-loaded.htm
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>XMLHttpRequest: the LOADED state change should only happen once</title>
+    <title>XMLHttpRequest: the LOADING state change should only happen once</title>
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-send()-method">
+    <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-send()-method" >
 </head>
 
 <div id="log"></div>
