--- a/XMLHttpRequest/abort-after-receive.htm
+++ b/XMLHttpRequest/abort-after-receive.htm
@@ -4,7 +4,7 @@
     <title>XMLHttpRequest: abort() after successful receive should not fire "abort" event</title>
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-abort()-method" />
+    <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-abort()-method" data-tested-assertations="following::ol[1]/li[4]"/>
   </head>
   <body>
     <div id="log"></div>
