--- a/XMLHttpRequest/response-data-gzip.htm
+++ b/XMLHttpRequest/response-data-gzip.htm
@@ -4,7 +4,7 @@
     <title>XMLHttpRequest: GZIP response was correctly inflated</title>
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <link rel="help" href="https://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-send()-method" />
+    <link rel="help" href="https://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-send()-method" data-tested-assertations="following::p[contains(text(),'content-encodings')]" />
   </head>
   <body>
     <div id="log"></div>
