--- a/XMLHttpRequest/response-data-progress.htm
+++ b/XMLHttpRequest/response-data-progress.htm
@@ -5,7 +5,8 @@
     <title>XMLHttpRequest: progress events grow response body size</title>
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-send()-method">
+    <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-send()-method" data-tested-assertations="following::a[contains(@href,'#make-progress-notifications')]/.. following::a[contains(@href,'#make-progress-notifications')]/../following:p[1]" />
+    <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#make-progress-notifications" data-tested-assertations=".." />
     <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#handler-xhr-onprogress" data-tested-assertations="/../.." />
     <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#event-xhr-progress" data-tested-assertations="/../.." />
 </head>
