--- a/XMLHttpRequest/abort-after-receive.htm
+++ b/XMLHttpRequest/abort-after-receive.htm
@@ -4,7 +4,7 @@
     <title>XMLHttpRequest: abort() after successful receive should not fire "abort" event</title>
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-abort()-method" data-tested-assertations="following::ol[1]/li[4]"/>
+    <link rel="help" href="http://dvcs.w3.org/hg/xhr/raw-file/tip/Overview.html#the-abort()-method" data-tested-assertations="following::ol[1]/li[4] following::ol[1]/li[5]"/>
   </head>
   <body>
     <div id="log"></div>
@@ -22,7 +22,9 @@
 
             assert_equals(client.readyState, 0);
 
-            test.done();
+            setTimeout(function(){ // use a timeout to catch any implementation that might queue an abort event for later - just in case
+              test.step(function(){test.done();});
+            }, 200);
           }
         });
 
