--- a/XMLHttpRequest/withcredentials-anonymous.htm
+++ b/XMLHttpRequest/withcredentials-anonymous.htm
@@ -13,19 +13,19 @@
       var client = new XMLHttpRequest({anonymous:true})
       test(function() {
         client.open("GET", "resources/delay.php?ms=1000")
-        assert_throws("INVALID_STATE_ERR", function() { client.withCredentials=true; })
+        assert_throws("InvalidStateError", function() { client.withCredentials=true; })
       }, "throw when set on anonymous request")
 
       var client = new XMLHttpRequest()
       test(function() {
         client.open("GET", "resources/delay.php?ms=1000", false)
-        assert_throws("INVALID_STATE_ERR", function() { client.withCredentials=true; })
+        assert_throws("InvalidStateError", function() { client.withCredentials=true; })
       }, "throw when set on sync request")
 
       var client = new XMLHttpRequest()
       test(function() {
         client.withCredentials=true;
-        assert_throws("INVALID_STATE_ERR", function() { client.open("GET", "resources/delay.php?ms=1000", false) })
+        assert_throws("InvalidStateError", function() { client.open("GET", "resources/delay.php?ms=1000", false) })
       }, "throw when opening sync request after setting withCredentials to true")
 
     </script>
