--- a/XMLHttpRequest/xmlhttprequest-network-error-sync.htm
+++ b/XMLHttpRequest/xmlhttprequest-network-error-sync.htm
@@ -20,7 +20,7 @@
       test(function() {
         var client = new XMLHttpRequest()
         client.open("GET", "resources/infinite-redirects.php", false)
-        assert_throws("NETWORK_ERR", function() { client.send(null) }, "send")
+        assert_throws("NetworkError", function() { client.send(null) }, "send")
         assert_equals(client.status, 0, "status")
         assert_equals(client.statusText, "", "statusText")
         assert_equals(client.getAllResponseHeaders(), "", "getAllResponseHeaders")
