--- a/XMLHttpRequest/abort-after-timeout.htm
+++ b/XMLHttpRequest/abort-after-timeout.htm
@@ -29,6 +29,7 @@
             assert_true(timeoutFired);
 
             // abort should not cause the "abort" event to fire
+            client.abort();
 
             setTimeout(function(){ // use a timeout to catch any implementation that might queue an abort event for later - just in case
               test.step(function(){test.done();});
