--- a/contributors/opera/submitted/css3-conditional/js/001.html
+++ b/contributors/opera/submitted/css3-conditional/js/001.html
@@ -29,10 +29,22 @@
 	}
 </style>
 <script>
+	/**
+	 * Asserts tha the two strings are equal, after normalizing whitespace
+	 *
+	 * If the serialization of whitespace and identation ever becomes
+	 * specified to a sufficient degree of presition, this should be
+	 * replaced by a strict textual comparison with assert_equals.
+	 */
+	funtion assert_equals_normalized(a, b) {
+		var normal_a = a.replace(/\s+/g, " ");
+		var normal b = b.replace(/\s+/g, " ");
+		assert_equals(normal_a, normal_b);
+	}
 	test(function(){
 		var base_rule = document.styleSheets[0].cssRules[0];
 		var child_rule = base_rule.cssRules[1];
-		assert_equals(base_rule.cssText,
+		assert_equals_normalized(base_rule.cssText,
 		              "@supports (padding: 0) {\n"
 		             +"  dfn { width: 0px; }\n"
 		             +"  @supports (width: 0) {\n"
@@ -40,7 +52,7 @@
 		             +"  }\n"
 		             +"  ol { display: none; }\n"
 		             +"}");
-		assert_equals(child_rule.cssText,
+		assert_equals_normalized(child_rule.cssText,
 		              "@supports (width: 0) {\n"
 		             +"  br { height: 0px; }\n"
 		             +"}");
@@ -50,7 +62,7 @@
 		var base_rule = document.styleSheets[0].cssRules[1];
 		var child_rule = base_rule.cssRules[0];
 		var grand_child_rule = child_rule.cssRules[0];
-		assert_equals(base_rule.cssText,
+		assert_equals_normalized(base_rule.cssText,
 		              "@media all {\n"
 		             +"  @supports (padding: 0) {\n"
 		             +"    @keyframes foo {\n"
@@ -59,14 +71,14 @@
 		             +"    }\n"
 		             +"  }\n"
 		             +"}");
-		assert_equals(child_rule.cssText,
+		assert_equals_normalized(child_rule.cssText,
 		              "@supports (padding: 0) {\n"
 		             +"  @keyframes foo {\n"
 		             +"    0% { top: 0px; left: 0px; }\n"
 		             +"    100% { top: 100px; left: 100px; }\n"
 		             +"  }\n"
 		             +"}");
-		assert_equals(grand_child_rule.cssText,
+		assert_equals_normalized(grand_child_rule.cssText,
 		              "@keyframes foo {\n"
 		             +"  0% { top: 0px; left: 0px; }\n"
 		             +"  100% { top: 100px; left: 100px; }\n"
@@ -192,14 +204,14 @@
 	}, "Inserting an @supports inside a style rule should fail");
 	test(function(){
 		var rule = document.styleSheets[0].cssRules[1];
-		assert_equals(rule.cssText,
+		assert_equals_normalized(rule.cssText,
 		              "@supports (border: black) and (padding: 0) and (width: 0) {\n"
 		             +"  dfn { width: 0px; }\n"
 		             +"}");
 	}, "'and' arguments in @supports serialize in the correct order and with extra parentheses");
 	test(function(){
 		var rule = document.styleSheets[0].cssRules[2];
-		assert_equals(rule.cssText,
+		assert_equals_normalized(rule.cssText,
 		              "@supports (border: black) or (padding: 0) or (width: 0) {\n"
 		             +"  dfn { width: 0px; }\n"
 		             +"}");
