--- a/roles-properties-supported/roles-properties-supported-option-aria-checked-true.html
+++ b/roles-properties-supported/roles-properties-supported-option-aria-checked-true.html
@@ -6,7 +6,7 @@
       <title>&lt;div&gt; with role option; supported state or property "aria-checked" value of "true"</title>
    </head>
    <body>
-      <div role="listbox"><div id="test" role="option">Placeholder content</div></div>
+      <div role="listbox"><div id="test" role="option" aria-checked="true">Placeholder content</div></div>
       <div id="obj1">obj1</div>
       <div id="obj2">obj2</div>
    </body>
