shadow dom : correct rel

--- a/shadow-dom/shadow-trees/text-decoration.html
+++ b/shadow-dom/shadow-trees/text-decoration.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" >
 		<title>Text Decoration Line-through Test</title>
-		<link rel="reference" href="text-decoration-ref.html">
+		<link rel="match" href="text-decoration-ref.html">
 		<link rel="author" title="Masaya Iseki" href="mailto:iseki.m.aa@gmail.com">
 		<link rel="help" href="https://www.w3.org/TR/shadow-dom/#text-decoration-property">
 		<meta name="assert" content="When shadow host has text-decoration, shadow tree is not affected.">
