Fix typo in comment.

--- a/WebIDL/tests/submissions/heycam/void-001.html
+++ b/WebIDL/tests/submissions/heycam/void-001.html
@@ -6,7 +6,7 @@
 <div id="log"></div>
 
 <script>
-// 4.2.1 any
+// 4.2.2 void
 //
 // Operations defined with a return type of void return undefined.
 
