--- a/testcases-multiselectable/testcase-listbox-multiselectable-C.html
+++ b/testcases-multiselectable/testcase-listbox-multiselectable-C.html
@@ -8,7 +8,7 @@
         
     <div role="listbox" aria-multiselect="true">
       <div role="option">Option 1</div> 
-      <div role="option" aria-selected="true" tabindex="-1">Option 2 (test for selected)</div> 
+      <div role="option" aria-selected="false" tabindex="-1">Option 2 (test for selected)</div> 
       <div role="option" aria-selected="false" id="ID_TARGET" tabindex="0">Option 3 (test for selected)</div> 
       <div role="option">Option 4</div> 
     </div>
