fix coding error test case 847

--- a/testcases-multiselectable/testcase-listbox-multiselectable-B.html
+++ b/testcases-multiselectable/testcase-listbox-multiselectable-B.html
@@ -39,8 +39,8 @@
       
      function setFocus() {
        var node = document.getElementById('ID_TARGET');  
-       node.setAtttribute("aria-selected","false";
        node.focus();
+       node.setAtttribute("aria-selected","false");
      }
      
      window.addEventListener('load', setFocus);
