switched spec links to TR versions, added reviewer links

--- a/contributors/ttwf_tokyo/ultimatezen/submitted/filter-invert-001-test.html
+++ b/contributors/ttwf_tokyo/ultimatezen/submitted/filter-invert-001-test.html
@@ -4,12 +4,12 @@
     <title>CSS filter grayscale: CSS grayscale filter shorthand</title>
     <link rel="author" title="Tien Le" href="mailto:shonentokyo@gmail.com">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
-    <link rel="help" href="http://dev.w3.org/FXTF/filters/#FilterProperty">
-    <link rel="help" href="http://dev.w3.org/FXTF/filters/#invertltnumbergt-ltpercentagegt">
-    <link rel="help" href="http://dev.w3.org/FXTF/filters/#invertEquivalent">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#FilterProperty">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#invertltnumbergt-ltpercentagegt">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#invertEquivalent">
     <link rel="match" href="filter-invert-001-ref.html">
-    <meta name="flags" content="">
-    <meta name="assert" content="CSS invert filter will apply a color matrix to the div element to invert the colors. Since invert is 0, it has no affect on the div.">
+    <meta name="assert" content="CSS invert filter will apply a color matrix to the div element to invert the colors. 
+    Since invert is 0, it has no affect on the div.">
     <style type="text/css">
    
 	div {
