--- a/contributors/ttwf_tokyo/ultimatezen/submitted/filter-invert-002-test.html
+++ b/contributors/ttwf_tokyo/ultimatezen/submitted/filter-invert-002-test.html
@@ -3,12 +3,13 @@
 <head>
     <title>CSS filter invert: CSS invert filter shorthand</title>
     <link rel="author" title="Tien Le" href="mailto:shonentokyo@gmail.com">
-    <link rel="help" href="http://dev.w3.org/FXTF/filters/#FilterProperty">
-    <link rel="help" href="http://dev.w3.org/FXTF/filters/#invertltnumbergt-ltpercentagegt">
-    <link rel="help" href="http://dev.w3.org/FXTF/filters/#invertEquivalent">
+    <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#FilterProperty">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#invertltnumbergt-ltpercentagegt">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#invertEquivalent">
     <link rel="match" href="filter-invert-002-ref.html">
-    <meta name="flags" content="">
-    <meta name="assert" content="CSS invert filter will apply a color matrix to the rectangle to invert the colors. Since invert is 100%, the yellow rectangle should become blue.">
+    <meta name="assert" content="CSS invert filter will apply a color matrix to the rectangle to invert the colors. 
+    Since invert is 100%, the yellow rectangle should become blue.">
     <style type="text/css">
    
 	div {
