--- a/contributors/ttwf_tokyo/yomotsu/submitted/filter-saturate-001-test.html
+++ b/contributors/ttwf_tokyo/yomotsu/submitted/filter-saturate-001-test.html
@@ -5,8 +5,8 @@
     <link rel="author" title="Akihiro Oyamada" href="mailto:admin@yomotsu.net">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
     <link rel="help" href="http://dev.w3.org/FXTF/filters/#FilterProperty">
-    <link rel="help" href="http://dev.w3.org/FXTF/filters/#saturateltnumbergt-ltpercentagegt">
-    <link rel="help" href="http://dev.w3.org/FXTF/filters/#saturateEquivalent">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#saturateltnumbergt-ltpercentagegt">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#saturateEquivalent">
     <link rel="match" href="filter-saturate-ref.html">
     <meta name="flags" content="">
     <meta name="assert" content="the test passes if you see gray box.">
