--- a/contributors/ttwf_tokyo/nakajmg/submitted/filters-opacity-002-test.html
+++ b/contributors/ttwf_tokyo/nakajmg/submitted/filters-opacity-002-test.html
@@ -4,11 +4,11 @@
     <title>CSS Filter Test: Test opacity shorthand with value 0</title>
     <link rel="author" title="Naohiro Nakajima" href="mailto:nakajima.jmg@gmail.com">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">    
-    <link rel="help" href="http://dev.w3.org/FXTF/filters/#FilterProperty">
-    <link rel="help" href="http://dev.w3.org/FXTF/filters/#opacityltnumbergt-ltpercentagegt">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#FilterProperty">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#opacityltnumbergt-ltpercentagegt">
     <link rel="match" href="reference/filters-opacity-002-ref.html">
-    <meta name="flags" content="">
-    <meta name="assert" content="CSS opacity filter will apply a transparency to the div element. Since opacity is 0, it has affect on the div to be transparent.">
+    <meta name="assert" content="CSS opacity filter will apply a transparency to the div element. 
+    Since opacity is 0, it has affect on the div to be transparent.">
     <style type="text/css">
 
         .box1{
