correct role in test case 841

--- a/presentational-children/testcase-841.html
+++ b/presentational-children/testcase-841.html
@@ -7,7 +7,7 @@
   <body>
     <h1>ARIA 1.0 Test Case 841: scrollbar</h1>
     
-    <div role="progressbar">
+    <div role="scrollbar">
       <div>Test text content</div> 
       <label>Textbox <input type="text" value="123456789"/></label> 
       <p><a href="#link">Test link</a></p> 
