added filter spec section links

--- a/contributors/ttwf_tokyo/gunta/submitted/css-filters-animation-blur-ref.html
+++ b/contributors/ttwf_tokyo/gunta/submitted/css-filters-animation-blur-ref.html
@@ -9,7 +9,7 @@
             width: 100px;
             height: 100px;
             background: blue;
-            filter: blur(10px);
+            -webkit-filter: blur(10px);
         }
     </style>
 </head>
