--- a/contributors/ttwf_tokyo/gunta/submitted/css-filters-animation-blur.html
+++ b/contributors/ttwf_tokyo/gunta/submitted/css-filters-animation-blur.html
@@ -4,7 +4,8 @@
     <title>CSS Filters Animation: Blur</title>
     <link rel="author" title="Gunther Brunner" href="mailto:takeshimiya@gmail.com">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
-    <link rel="help" href="http://www.w3.org/TR/filter-effects/">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#FilterProperty">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#blurltlengthgt">
     <link rel="help" href="http://www.w3.org/TR/css3-animations/#animations">
     <link rel="match" href="css-filters-animation-blur-ref.html">
     <meta name="assert" content="The blue square should be 10px blurred">
@@ -28,7 +29,7 @@
             animation-duration: 4s;
             animation-timing-function: linear;
         }
-    </style>
+     </style>
 </head>
 <body>
 <p>You should see a blurred rectangle.</p>
