--- a/contributors/ttwf_tokyo/gunta/submitted/css-filters-animation-contrast.html
+++ b/contributors/ttwf_tokyo/gunta/submitted/css-filters-animation-contrast.html
@@ -4,7 +4,8 @@
     <title>CSS Filters Animation: Contrast</title>
     <link rel="author" title="Gunther Brunner" href="mailto:takeshimiya@gmail.com">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
-    <link rel="help" href="http://www.w3.org/TR/filter-effects/">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#FilterProperty">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#contrastltnumbergt-ltpercentagegt">
     <link rel="help" href="http://www.w3.org/TR/css3-animations/#animations">
     <link rel="match" href="css-filters-animation-contrast-ref.html">
     <meta name="assert" content="The black square should be gray">
