--- a/contributors/ttwf_tokyo/gunta/submitted/css-filters-animation-hue-rotate.html
+++ b/contributors/ttwf_tokyo/gunta/submitted/css-filters-animation-hue-rotate.html
@@ -4,6 +4,7 @@
     <title>CSS Filters Animation: Hue-rotate</title>
     <link rel="author" title="Gunther Brunner" href="mailto:takeshimiya@gmail.com">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
+    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
     <link rel="help" href="http://www.w3.org/TR/filter-effects/#FilterProperty">
     <link rel="help" href="http://www.w3.org/TR/filter-effects/#hue-rotateltanglegt">
     <link rel="help" href="http://www.w3.org/TR/css3-animations/#animations">
@@ -25,7 +26,7 @@
             background: blue;
             animation-name: animate;
             animation-play-state: paused;
-            animation-delay: -2s;
+            animation-delay: -1s;
             animation-duration: 4s;
             animation-timing-function: linear;
         }
