--- a/contributors/ttwf_tokyo/gunta/submitted/css-filters-animation-blur-ref.html
+++ b/contributors/ttwf_tokyo/gunta/submitted/css-filters-animation-blur-ref.html
@@ -4,12 +4,13 @@
     <title>CSS Filters Animation: Blur Reference</title>
     <link rel="author" title="Gunther Brunner" href="mailto:takeshimiya@gmail.com">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
+    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
     <style type="text/css">
         .square {
             width: 100px;
             height: 100px;
             background: blue;
-            -webkit-filter: blur(10px);
+            filter: blur(10px);
         }
     </style>
 </head>
