--- a/contributors/ttwf_tokyo/gunta/submitted/css-filters-animation-sepia-ref.html
+++ b/contributors/ttwf_tokyo/gunta/submitted/css-filters-animation-sepia-ref.html
@@ -4,6 +4,7 @@
     <title>CSS Filters Animation: Sepia Reference</title>
     <link rel="author" title="Gunther Brunner" href="mailto:takeshimiya@gmail.com">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
+    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
     <style type="text/css">
         .square {
             width: 100px;
