added spec and reviewere links

--- a/contributors/ttwf_tokyo/sparkgene/submitted/filters-drop-shadow-ref.html
+++ b/contributors/ttwf_tokyo/sparkgene/submitted/filters-drop-shadow-ref.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <p>You should see two green overlspping rectangles and no red.</p>
+    <p>You should see two green overlapping rectangles and no red.</p>
     <div id="box_shadow"></div>
     <div id="box"></div>
 
