--- a/contributors/ttwf_tokyo/sparkgene/submitted/filters-test-brightness-001.html
+++ b/contributors/ttwf_tokyo/sparkgene/submitted/filters-test-brightness-001.html
@@ -4,10 +4,13 @@
     <title>CSS Writing Modes Test: drop-shadow offset test</title>
     <link rel="author" title="Jun Ichikawa" href="mailto:jun1ka0@gmail.com">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
-    <link rel="help" href="https://dvcs.w3.org/hg/FXTF/raw-file/default/filters/index.html#brightnessltnumbergt-ltpercentagegt">
-    <link rel="match" href="reference/svg-filters-ref-brightness-001.html">
+    <link rel="reviewer" title="Rebecca Hauck" href="mailto:rhauck@adobe.com">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#FilterProperty">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#brightnessltnumbergt-ltpercentagegt">
+    <link rel="match" href="filters-ref-brightness-001.html">
     <meta name="flags" content="">
-    <meta name="assert" content="This test verifies that the brightness shorthand works. Green rectangle must shown, when brightness set to 100%.">
+    <meta name="assert" content="This test verifies that the brightness shorthand works. Green rectangle must shown, 
+    when brightness set to 100%.">
     <style type="text/css">
    
         div.brightness_hundred {
