--- a/contributors/ttwf_tokyo/sparkgene/submitted/filters-test-brightness-002.html
+++ b/contributors/ttwf_tokyo/sparkgene/submitted/filters-test-brightness-002.html
@@ -4,10 +4,12 @@
     <title>CSS Writing Modes Test: drop-shadow offset test</title>
     <link rel="author" title="Jun Ichikawa" href="mailto:jun1ka0@gmail.com">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
-    <link rel="help" href="https://dvcs.w3.org/hg/FXTF/raw-file/default/filters/index.html#brightnessltnumbergt-ltpercentagegt">
-    <link rel="match" href="reference/svg-filters-ref-brightness-002.html">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#FilterProperty">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#brightnessltnumbergt-ltpercentagegt">
+    <link rel="match" href="filters-ref-brightness-002.html">
     <meta name="flags" content="">
-    <meta name="assert" content="This test verifies that the brightness shorthand works. Black rectangle must shown, when brightness set 0%.">
+    <meta name="assert" content="This test verifies that the brightness shorthand works. Black rectangle must shown, 
+    when brightness set 0%.">
     <style type="text/css">
         div.brightness_zero {
             width: 200px;
