moved to submitted folder and added TR spec links
--HG--
rename : contributors/ttwf_tokyo/yomotsu/filter-external-001-ref.html => contributors/ttwf_tokyo/yomotsu/submitted/filter-external-001-ref.html
rename : contributors/ttwf_tokyo/yomotsu/filter-external-001-test.html => contributors/ttwf_tokyo/yomotsu/submitted/filter-external-001-test.html
rename : contributors/ttwf_tokyo/yomotsu/filter-external-002-filter.svg => contributors/ttwf_tokyo/yomotsu/submitted/filter-external-002-filter.svg
rename : contributors/ttwf_tokyo/yomotsu/filter-external-002-test.html => contributors/ttwf_tokyo/yomotsu/submitted/filter-external-002-test.html

--- a/contributors/ttwf_tokyo/yomotsu/submitted/filter-saturate-001-test.html
+++ b/contributors/ttwf_tokyo/yomotsu/submitted/filter-saturate-001-test.html
@@ -4,7 +4,7 @@
     <title>CSS Filter Test: Test for Saturate short hand</title>
     <link rel="author" title="Akihiro Oyamada" href="mailto:admin@yomotsu.net">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
-    <link rel="help" href="http://dev.w3.org/FXTF/filters/#FilterProperty">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#FilterProperty">
     <link rel="help" href="http://www.w3.org/TR/filter-effects/#saturateltnumbergt-ltpercentagegt">
     <link rel="help" href="http://www.w3.org/TR/filter-effects/#saturateEquivalent">
     <link rel="match" href="filter-saturate-001-ref.html">
