--- a/contributors/ttwf_tokyo/yomotsu/submitted/filter-external-001-test.html
+++ b/contributors/ttwf_tokyo/yomotsu/submitted/filter-external-001-test.html
@@ -4,10 +4,11 @@
     <title>CSS Filter Test: load external SVG Filter (ID attribute)</title>
     <link rel="author" title="Akihiro Oyamada" href="mailto:admin@yomotsu.net">
     <link rel="reviewer" title="Dirk Schulze" href="mailto:dschulze@adobe.com">
-    <link rel="help" href="https://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html#lturlgt">
-    <link rel="help" href="https://dvcs.w3.org/hg/FXTF/raw-file/tip/filters/index.html#huerotateEquivalent">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#FilterProperty">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#lturlgt">
+    <link rel="help" href="http://www.w3.org/TR/filter-effects/#huerotateEquivalent">
     <link rel="match" href="filter-external-001-ref.html">
-    <meta name="flags" content="">
+    <meta name="flags" content="svg">
     <meta name="assert" content="the test passes if you see green box.">
     <style type="text/css">
     div {
