--- a/contributors/ttwf_tokyo/lequinharay/submitted/selectorSerialize.html
+++ b/contributors/ttwf_tokyo/lequinharay/submitted/selectorSerialize.html
@@ -3,8 +3,7 @@
     <head>
         <title>CSSOM Test: test serialized selector which is only one simple selector in the sequence of simple selectors</title>
         <link rel="author" title="T.Nishitani" href="mailto:lequinharay@gmail.com">
-        <!-- You must have at least one spec link, but may have as many as are covered in the test. -->
-        <!-- Be sure to make the main testing area first in the order -->
+        <link rel="reviewer" title="L. David Baron" href="http://dbaron.org/">
         <link rel="help" href="http://dev.w3.org/csswg/cssom/#serializing-selectors">
         <meta name="flags" content="dom">
         <meta charset="utf-8">
