fix multiselectable attribute name bugs

--- a/testcases-multiselectable/testcase-grid-multiselectable-B.html
+++ b/testcases-multiselectable/testcase-grid-multiselectable-B.html
@@ -6,7 +6,7 @@
   <body>
     <h1>ARIA 1.0 Test Case: Grid role with aria-multiselectable</h1>
         
-    <div role="grid" aria-multiselect="true">
+    <div role="grid" aria-multiselectable="true">
       <div role="group">
         <div role="columnheader">Header 1</div> 
         <div role="columnheader">Header 2</div>       
