--- a/testcases-multiselectable/testcase-listbox-multiselectable-C.html
+++ b/testcases-multiselectable/testcase-listbox-multiselectable-C.html
@@ -6,7 +6,7 @@
   <body>
     <h1>ARIA 1.0 Test Case: Listbox role with multiseclect</h1>
         
-    <div role="listbox" aria-multiselect="true">
+    <div role="listbox" aria-multiselectable="true">
       <div role="option">Option 1</div> 
       <div role="option" aria-selected="false" tabindex="-1">Option 2 (test for selected)</div> 
       <div role="option" aria-selected="false" id="ID_TARGET" tabindex="0">Option 3 (test for selected)</div> 
