--- a/testcases-multiselectable/testcase-tree-multiselectable-C.html
+++ b/testcases-multiselectable/testcase-tree-multiselectable-C.html
@@ -6,7 +6,7 @@
   <body>
     <h1>ARIA 1.0 Test Case: Tree role with aria-multiselectable</h1>
         
-    <div role="tree" aria-multiselect="true">
+    <div role="tree" aria-multiselectable="true">
       <div role="treeitem">Leaf 1
         <div role="group">
           <div role="treeitem" aria-selected="true">Leaf 1A (Selected)</div> 
