--- a/testcases-multiselectable/testcase-listbox-multiselectable-B.html
+++ b/testcases-multiselectable/testcase-listbox-multiselectable-B.html
@@ -40,7 +40,7 @@
      function setFocus() {
        var node = document.getElementById('ID_TARGET');  
        node.focus();
-       node.setAtttribute("aria-selected","false");
+       node.setAttribute("aria-selected","false");
      }
      
      window.addEventListener('load', setFocus);
