--- a/testcases-multiselectable/testcase-listbox-multiselectable-C.html
+++ b/testcases-multiselectable/testcase-listbox-multiselectable-C.html
@@ -40,7 +40,7 @@
      function setFocus() {
        var node = document.getElementById('ID_TARGET');  
        node.focus();
-       node.setAtttribute("aria-selected","true");
+       node.setAttribute("aria-selected","true");
      }
      
      window.addEventListener('load', setFocus);
