check order on selection and focus

--- a/testcases-multiselectable/testcase-listbox-multiselectable-C.html
+++ b/testcases-multiselectable/testcase-listbox-multiselectable-C.html
@@ -39,8 +39,9 @@
       
      function setFocus() {
        var node = document.getElementById('ID_TARGET');  
-       node.focus();
        node.setAttribute("aria-selected","true");
+       node.focus();
+       //node.setAttribute("aria-selected","true");
      }
      
      window.addEventListener('load', setFocus);
