--- a/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-horizontal-rectangle-001-reference.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-horizontal-rectangle-001-reference.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<title>CSS Test: horizontal rectangle shape-outside on floats, vertical-rl writing mode</title>
+<title>CSS RefTest Reference</title>
 <link rel="author" title="Bem Jones-Bey" href="mailto:bjonesbe@adobe.com">
+<meta name="flags" content="ahem">
 <style>
 .container {
     width: 75px;
     height: 100px;
     font: 25px/1 Ahem;
+    line-height: 25px;
     border: 10px solid black;
     display: inline-block;
-    writing-mode: vertical-rl;
+    writing-mode: vertical-lr;
 }
 
 .left-text {
