--- a/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-000-reference.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-000-reference.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<title>CSS Test: vertical rectangle shape-outside on floats, vertical-rl writing mode</title>
+<title>CSS RefTest Reference</title>
 <link rel="author" title="Bem Jones-Bey" href="mailto:bjonesbe@adobe.com">
+<meta name="flags" content="ahem">
 <style>
 .container {
-    width: 100px;
-    height: 75px;
+    width: 75px;
+    height: 100px;
     font: 25px/1 Ahem;
+    line-height: 25px;
     border: 10px solid black;
     display: inline-block;
-    writing-mode: vertical-rl;
 }
 
 .left-text {
@@ -21,14 +22,14 @@
 
 .left {
     float: left;
-    width: 75px;
-    height: 50px;
+    width: 50px;
+    height: 75px;
 }
 
 .right {
     float: right;
-    width: 75px;
-    height: 50px;
+    width: 50px;
+    height: 75px;
 }
 </style>
 </head>
