--- a/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-000.html
@@ -2,13 +2,19 @@
 <title>CSS Test: vertical rectangle shape-outside on floats</title>
 <link rel="author" title="Bem Jones-Bey" href="mailto:bjonesbe@adobe.com">
 <link rel="help" href="http://dev.w3.org/csswg/css-shapes-1/#shape-outside-property">
-<link rel="match" href="shape-outside-floats-vertical-rectangle-000-expected.html">
+<link rel="match" href="shape-outside-floats-vertical-rectangle-000-reference.html">
 <meta name="flags" content="ahem">
+<script>
+// This is required to run the tests in WebKit's test infrastructure.
+if (window.internals)
+    window.internals.settings.setCSSShapesEnabled(true);
+</script>
 <style>
 .container {
     width: 75px;
     height: 100px;
     font: 25px/1 Ahem;
+    line-height: 25px;
     border: 10px solid black;
     display: inline-block;
 }
