--- a/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-001-reference.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-001-reference.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<title>CSS Test: vertical rectangle shape-outside on floats, vertical-lr writing mode</title>
+<title>CSS RefTest Reference</title>
 <link rel="author" title="Bem Jones-Bey" href="mailto:bjonesbe@adobe.com">
+<meta name="flags" content="ahem">
 <style>
 .container {
     width: 100px;
     height: 75px;
     font: 25px/1 Ahem;
+    line-height: 25px;
     border: 10px solid black;
     display: inline-block;
     writing-mode: vertical-lr;
