--- a/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-002-reference.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/shape-outside-floats-vertical-rectangle-002-reference.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<title>CSS Test: horizontal rectangle shape-outside on floats</title>
+<title>CSS RefTest Reference</title>
 <link rel="author" title="Bem Jones-Bey" href="mailto:bjonesbe@adobe.com">
+<meta name="flags" content="ahem">
 <style>
 .container {
     width: 100px;
     height: 75px;
     font: 25px/1 Ahem;
+    line-height: 25px;
     border: 10px solid black;
     display: inline-block;
+    writing-mode: vertical-rl;
 }
 
 .left-text {
@@ -32,18 +35,20 @@
 </style>
 </head>
 <body>
-    <p>Test passes if you see two black rectangle boxes with a smaller white rectangle in one corner of each.</p>
+    <p>Test passes if you see two black rectangle boxes with a smaller white rectangle in one corner.</p>
     <div class="container left-text">
         <div class="left"></div>
         X<br/>
         X<br/>
-        XXXX<br/>
+        X<br/>
+        XXX<br/>
     </div>
 
     <div class="container right-text">
         <div class="right"></div>
         X<br/>
         X<br/>
-        XXXX<br/>
+        X<br/>
+        XXX<br/>
     </div>
 </body>
