--- a/XMLHttpRequest/send-send.htm
+++ b/XMLHttpRequest/send-send.htm
@@ -13,7 +13,7 @@
         var client = new XMLHttpRequest()
         client.open("GET", "resources/well-formed.xml")
         client.send(null)
-        assert_throws("INVALID_STATE_ERR", function() { client.send(null) })
+        assert_throws("InvalidStateError", function() { client.send(null) })
         client.abort()
       })
     </script>
