--- a/XMLHttpRequest/overridemimetype-invalid-mime-type.htm
+++ b/XMLHttpRequest/overridemimetype-invalid-mime-type.htm
@@ -12,13 +12,13 @@
     <script>
       test(function() {
         var client = new XMLHttpRequest();
-        assert_throws("SYNTAX_ERR", function() { client.overrideMimeType('text\\plain;charset=Shift-JIS'); });
-        assert_throws("SYNTAX_ERR", function() { client.overrideMimeType('text plain;charset=Shift-JIS'); });
-        assert_throws("SYNTAX_ERR", function() { client.overrideMimeType('text\nplain;charset=Shift-JIS'); });
-        assert_throws("SYNTAX_ERR", function() { client.overrideMimeType('cahrset=Shift-JIS'); });
-        assert_throws("SYNTAX_ERR", function() { client.overrideMimeType(null); });
-        assert_throws("SYNTAX_ERR", function() { client.overrideMimeType(50212); });
-        assert_throws("SYNTAX_ERR", function() { client.overrideMimeType( (new Array(1000)).join('a/b/c/') ); });
+        assert_throws("SyntaxError", function() { client.overrideMimeType('text\\plain;charset=Shift-JIS'); });
+        assert_throws("SyntaxError", function() { client.overrideMimeType('text plain;charset=Shift-JIS'); });
+        assert_throws("SyntaxError", function() { client.overrideMimeType('text\nplain;charset=Shift-JIS'); });
+        assert_throws("SyntaxError", function() { client.overrideMimeType('cahrset=Shift-JIS'); });
+        assert_throws("SyntaxError", function() { client.overrideMimeType(null); });
+        assert_throws("SyntaxError", function() { client.overrideMimeType(50212); });
+        assert_throws("SyntaxError", function() { client.overrideMimeType( (new Array(1000)).join('a/b/c/') ); });
       });
     </script>
   </body>
