--- a/XMLHttpRequest/send-authentication-basic-cors-not-enabled.htm
+++ b/XMLHttpRequest/send-authentication-basic-cors-not-enabled.htm
@@ -17,7 +17,7 @@
         client.open("GET", location.protocol+'//'+urlstart + "resources/auth1/auth.php", false, 'user', 'pass')
         client.setRequestHeader("x-user", 'user')
         client.setRequestHeader("x-pass", 'pass')
-        assert_throws("NETWORK_ERR", function(){ client.send(null) })
+        assert_throws("NetworkError", function(){ client.send(null) })
         assert_equals(client.responseText, '')
         assert_equals(client.status, 0)
         assert_equals(client.getResponseHeader('x-challenge'), null)
