--- a/XMLHttpRequest/send-entity-body-document-bogus.htm
+++ b/XMLHttpRequest/send-entity-body-document-bogus.htm
@@ -13,7 +13,7 @@
         test(function() {
           var client = new XMLHttpRequest()
           client.open("POST", "resources/content.php", false)
-          assert_throws("INVALID_STATE_ERR", function() { client.send(input) })
+          assert_throws("InvalidStateError", function() { client.send(input) })
         })
       }
       var doc = document.implementation.createDocument(null, null, null)
