--- a/XMLHttpRequest/send-non-same-origin.htm
+++ b/XMLHttpRequest/send-non-same-origin.htm
@@ -15,7 +15,7 @@
         test(function() {
           var client = new XMLHttpRequest()
           client.open("GET", url, false)
-          assert_throws("NETWORK_ERR", function() { client.send() })
+          assert_throws("NetworkError", function() { client.send() })
         }, document.title + " (" + url + ")")
       }
       url("mailto:test@example.org")
