--- a/XMLHttpRequest/send-redirect-bogus-sync.htm
+++ b/XMLHttpRequest/send-redirect-bogus-sync.htm
@@ -13,7 +13,7 @@
         test(function() {
           var client = new XMLHttpRequest()
           client.open("GET", "resources/redirect.php?location=" + location + "&code=" + code, false)
-          assert_throws("NETWORK_ERR", function() { client.send(null) })
+          assert_throws("NetworkError", function() { client.send(null) })
         }, document.title + " (" + code + ": " + location + ")")
       }
       redirect("301", "foobar://abcd")
