--- a/XMLHttpRequest/setrequestheader-after-send.htm
+++ b/XMLHttpRequest/setrequestheader-after-send.htm
@@ -15,7 +15,7 @@
         client.open("GET", "resources/delay.php?ms=0")
         client.onreadystatechange = function() {
           test.step(function() {
-            assert_throws("INVALID_STATE_ERR", function() { client.setRequestHeader("x-test", "test") })
+            assert_throws("InvalidStateError", function() { client.setRequestHeader("x-test", "test") })
             if(client.readyState == 4)
               test.done()
           })
