--- a/XMLHttpRequest/setrequestheader-before-open.htm
+++ b/XMLHttpRequest/setrequestheader-before-open.htm
@@ -11,7 +11,7 @@
     <script>
       test(function() {
         var client = new XMLHttpRequest()
-        assert_throws("INVALID_STATE_ERR", function() { client.setRequestHeader("x-test", "test") })
+        assert_throws("InvalidStateError", function() { client.setRequestHeader("x-test", "test") })
         }, 'setRequestHeader invoked before open()');
     </script>
   </body>
