--- a/XMLHttpRequest/setrequestheader-bogus-value.htm
+++ b/XMLHttpRequest/setrequestheader-bogus-value.htm
@@ -14,7 +14,7 @@
         test(function() {
           var client = new XMLHttpRequest()
           client.open("GET", "...")
-          assert_throws("SYNTAX_ERR", function() { client.setRequestHeader("x-test", value) }, ' given value ' + value+', ')
+          assert_throws("SyntaxError", function() { client.setRequestHeader("x-test", value) }, ' given value ' + value+', ')
         })
       }
       try_value("t\rt")
