--- a/XMLHttpRequest/withcredentials-wrong-state.htm
+++ b/XMLHttpRequest/withcredentials-wrong-state.htm
@@ -14,10 +14,10 @@
       test.step(function() {
         client.open("GET", "resources/delay.php?ms=1000")
         client.send();
-        assert_throws("INVALID_STATE_ERR", function() { client.withCredentials=true; })
+        assert_throws("InvalidStateError", function() { client.withCredentials=true; })
         client.onreadystatechange = function(){
           test.step(function(){ 
-            assert_throws("INVALID_STATE_ERR", function() { client.withCredentials=true; })
+            assert_throws("InvalidStateError", function() { client.withCredentials=true; })
             if (client.readyState === 4) { 
               test.done()
             };
