--- a/XMLHttpRequest/xmlhttprequest-unsent.htm
+++ b/XMLHttpRequest/xmlhttprequest-unsent.htm
@@ -20,8 +20,8 @@
     <script>
       test(function() {
         var client = new XMLHttpRequest()
-        assert_throws("INVALID_STATE_ERR", function() { client.setRequestHeader("x-test", "test") }, "setRequestHeader")
-        assert_throws("INVALID_STATE_ERR", function() { client.send(null) }, "send")
+        assert_throws("InvalidStateError", function() { client.setRequestHeader("x-test", "test") }, "setRequestHeader")
+        assert_throws("InvalidStateError", function() { client.send(null) }, "send")
         assert_equals(client.status, 0, "status")
         assert_equals(client.statusText, "", "statusText")
         assert_equals(client.getAllResponseHeaders(), "", "getAllResponseHeaders")
